--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
