--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,12 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// implementation 'org.springframework.boot:spring-boot-starter-web'
+	// testImplementation('junit:junit:4.13')
 	testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+	// testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
