--- a/build.gradle
+++ b/build.gradle
@@ -6,18 +6,15 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	// implementation 'org.springframework.boot:spring-boot-starter-web'
-	// testImplementation('junit:junit:4.13')
-	testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-	// testImplementation('org.springframework.boot:spring-boot-starter-test')
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
